# Euchre_plusplus

./: .gitignore  CMakeLists.txt  README.md  gtest.cmake
src/: carddeck.cpp  carddeck.hpp  cardprinter.cpp  cardprinter.hpp  euchre.cpp  euchre.hpp  euchredeck.cpp  euchredeck.hpp  main.cpp  player.cpp  player.hpp
test/: test.cpp
